--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -1,6 +1,6 @@
 <!-- -------------------------------------ingredients-modal--------- -->
 
-<div class="backdrop">
+<div class="backdrop is-hidden">
   <div class="ingredients-mdal-window container">
     <h3 class="ingredients-title">Chololate icecream</h3>
     <picture class="ingredients-picture">
