--- a/src/partials/franchise-modal.html
+++ b/src/partials/franchise-modal.html
@@ -1,6 +1,10 @@
-<div class="backdrop is-hidden">
+<div class="backdrop is-hidden" data-franchise-modal>
   <div class="franchise-modal">
-    <button type="button" class="franchise-modal-close">
+    <button
+      type="button"
+      class="franchise-modal-close"
+      data-franchise-modal-close
+    >
       <svg class="franchise-modal-close__icon" width="20" height="20">
         <use href="./images/icons.svg#icon-modal-cross"></use>
       </svg>
