--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,13 +4,13 @@
         <ul class="contact__card-list list">
             <li class="contacts__company">
                 <div class="contacts__wrap">
-                    <div class="contacts__name">
-                        <p class="name">cafe</p>
+                    <div class="contacts__name-wrap">
+                        <p class="contacts__name">cafe</p>
                     </div>
                     <div class="contacts__location">
                         <p class="contacts__location-text">Chicago</p>
                         <a href="10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA"
-                            class="contacts__location-link link">10340 Ridgeland Ave, Chicago<br>Ridge, IL 60415,
+                            class="contacts__location-link link">10340 Ridgeland Ave,<br>Chicago Ridge, IL 60415,
                             USA</a>
                     </div>
                     <div class="contacts__week">
@@ -33,8 +33,8 @@
             </li>
             <li class="contacts__company">
                 <div class="contacts__wrap">
-                    <div class="contacts__name-foodtruck">
-                        <p class="name">food truck</p>
+                    <div class="contacts__name-wrap">
+                        <p class="contacts__name">food truck</p>
                     </div>
                     <div class="contacts__location">
                         <p class="contacts__location-text">Los Angeles</p>
@@ -55,15 +55,15 @@
                         </ul>
                     </div>
                     <address class="contacts__address">
-                        <a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
+                        <a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
                     </address>
                 </div>
             </li>
             <li class="contacts__company">
                 <div class="contacts__wrap">
-                    <div class="contacts__name">
-                        <p class="name">cafe</p>
+                    <div class="contacts__name-wrap">
+                        <p class="contacts__name">cafe</p>
                     </div>
                     <div class="contacts__location">
                         <p class="contacts__location-text">New York</p>
@@ -83,11 +83,19 @@
                         </ul>
                     </div>
                     <address class="contacts__address">
-                        <a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
+                        <a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
                     </address>
                 </div>
             </li>
         </ul>
+        <div class="contacts__buttons">
+            <button class="contacts__button" type="button" data-location-modal-open>Our Locations <svg class="contacts__button-icon" width="12" height="12">
+                <use href="./images/icons.svg#icon-arrow"></use>
+            </svg></button>
+            <button class="contacts__button contacts__button-second" type="button" data-franchise-modal-open>Franchise <svg class="contacts__button-icon" width="12" height="12">
+                <use href="./images/icons.svg#icon-arrow"></use>
+            </svg></button>
+        </div>
     </div>
 </section>
