did all contacts styles

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,101 +1,130 @@
 <section class="contacts">
-    <div class="container">
-        <h2 class="contacts__title visually-hidden">contacts</h2>
-        <ul class="contact__card-list list">
-            <li class="contacts__company">
-                <div class="contacts__wrap">
-                    <div class="contacts__name-wrap">
-                        <p class="contacts__name">cafe</p>
-                    </div>
-                    <div class="contacts__location">
-                        <p class="contacts__location-text">Chicago</p>
-                        <a href="10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA"
-                            class="contacts__location-link link">10340 Ridgeland Ave,<br>Chicago Ridge, IL 60415,
-                            USA</a>
-                    </div>
-                    <div class="contacts__week">
-                        <ul class="contacts__week-list list">
-                            <li class="contacts__week-item">
-                                <p class="working-days">Monday - Friday</p>
-                                <p class="working-time">06:00 AM - 10:00 PM</p>
-                            </li>
-                            <li class="contacts__week-item">
-                                <p class="working-days">Saturday - Sunday</p>
-                                <p class="working-time">08:00 AM - 16:00 PM</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <address class="contacts__address">
-                        <a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
-                    </address>
-                </div>
-            </li>
-            <li class="contacts__company">
-                <div class="contacts__wrap">
-                    <div class="contacts__name-wrap">
-                        <p class="contacts__name">food truck</p>
-                    </div>
-                    <div class="contacts__location">
-                        <p class="contacts__location-text">Los Angeles</p>
-                        <a href="1003 Manhattan Ave, Manhattan Beach, CA 90263, USA"
-                            class="contacts__location-link link">1003 Manhattan Ave, Manhattan<br>Beach, CA 90263,
-                            USA</a>
-                    </div>
-                    <div class="contacts__week">
-                        <ul class="contacts__week-list list">
-                            <li class="contacts__week-item">
-                                <p class="working-days">Monday - Friday</p>
-                                <p class="working-time">06:00 AM - 10:00 PM</p>
-                            </li>
-                            <li class="contacts__week-item">
-                                <p class="working-days">Saturday - Sunday</p>
-                                <p class="working-time">08:00 AM - 16:00 PM</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <address class="contacts__address">
-                        <a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
-                    </address>
-                </div>
-            </li>
-            <li class="contacts__company">
-                <div class="contacts__wrap">
-                    <div class="contacts__name-wrap">
-                        <p class="contacts__name">cafe</p>
-                    </div>
-                    <div class="contacts__location">
-                        <p class="contacts__location-text">New York</p>
-                        <a href="726 Sterling Pl, Brooklyn, NY 11222, USA" class="contacts__location-link link">726
-                            Sterling Pl, Brooklyn, NY<br>11222, USA</a>
-                    </div>
-                    <div class="contacts__week">
-                        <ul class="contacts__week-list list">
-                            <li class="contacts__week-item">
-                                <p class="working-days">Monday - Friday</p>
-                                <p class="working-time">06:00 AM - 10:00 PM</p>
-                            </li>
-                            <li class="contacts__week-item">
-                                <p class="working-days">Saturday - Sunday</p>
-                                <p class="working-time">08:00 AM - 16:00 PM</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <address class="contacts__address">
-                        <a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
-                    </address>
-                </div>
-            </li>
-        </ul>
-        <div class="contacts__buttons">
-            <button class="contacts__button" type="button" data-location-modal-open>Our Locations <svg class="contacts__button-icon" width="12" height="12">
-                <use href="./images/icons.svg#icon-arrow"></use>
-            </svg></button>
-            <button class="contacts__button contacts__button-second" type="button" data-franchise-modal-open>Franchise <svg class="contacts__button-icon" width="12" height="12">
-                <use href="./images/icons.svg#icon-arrow"></use>
-            </svg></button>
+  <div class="container">
+    <h2 class="contacts__title visually-hidden">contacts</h2>
+    <ul class="contact__card-list list">
+      <li class="contacts__company">
+        <div class="contacts__wrap">
+          <div class="contacts__name-wrap">
+            <p class="contacts__name">cafe</p>
+          </div>
+          <div class="contacts__location">
+            <p class="contacts__location-text">Chicago</p>
+            <a
+              href="10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA"
+              class="contacts__location-link link"
+              >10340 Ridgeland Ave,<br />Chicago Ridge, IL 60415, USA</a
+            >
+          </div>
+          <div class="contacts__week">
+            <ul class="contacts__week-list list">
+              <li class="contacts__week-item">
+                <p class="working-days">Monday - Friday</p>
+                <p class="working-time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contacts__week-item">
+                <p class="working-days">Saturday - Sunday</p>
+                <p class="working-time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
+          </div>
+          <address class="contacts__address">
+            <a href="tel:+61(0) 383 766 284" class="address-link"
+              >+61(0) 383 766 284</a
+            >
+            <a href="mailto:noreply@envato.com" class="address-link"
+              >noreply@envato.com</a
+            >
+          </address>
         </div>
+      </li>
+      <li class="contacts__company">
+        <div class="contacts__wrap">
+          <div class="contacts__name-wrap">
+            <p class="contacts__name">food truck</p>
+          </div>
+          <div class="contacts__location">
+            <p class="contacts__location-text">Los Angeles</p>
+            <a
+              href="1003 Manhattan Ave, Manhattan Beach, CA 90263, USA"
+              class="contacts__location-link link"
+              >1003 Manhattan Ave, Manhattan<br />Beach, CA 90263, USA</a
+            >
+          </div>
+          <div class="contacts__week">
+            <ul class="contacts__week-list list">
+              <li class="contacts__week-item">
+                <p class="working-days">Monday - Friday</p>
+                <p class="working-time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contacts__week-item">
+                <p class="working-days">Saturday - Sunday</p>
+                <p class="working-time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
+          </div>
+          <address class="contacts__address">
+            <a href="tel:+61(0) 383 766 284" class="address-link"
+              >+61(0) 383 766 284</a
+            >
+            <a href="mailto:noreply@envato.com" class="address-link"
+              >noreply@envato.com</a
+            >
+          </address>
+        </div>
+      </li>
+      <li class="contacts__company">
+        <div class="contacts__wrap">
+          <div class="contacts__name-wrap">
+            <p class="contacts__name">cafe</p>
+          </div>
+          <div class="contacts__location">
+            <p class="contacts__location-text">New York</p>
+            <a
+              href="726 Sterling Pl, Brooklyn, NY 11222, USA"
+              class="contacts__location-link link"
+              >726 Sterling Pl, Brooklyn, NY<br />11222, USA</a
+            >
+          </div>
+          <div class="contacts__week">
+            <ul class="contacts__week-list list">
+              <li class="contacts__week-item">
+                <p class="working-days">Monday - Friday</p>
+                <p class="working-time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contacts__week-item">
+                <p class="working-days">Saturday - Sunday</p>
+                <p class="working-time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
+          </div>
+          <address class="contacts__address">
+            <a href="tel:+61(0) 383 766 284" class="address-link"
+              >+61(0) 383 766 284</a
+            >
+            <a href="mailto:noreply@envato.com" class="address-link"
+              >noreply@envato.com</a
+            >
+          </address>
+        </div>
+      </li>
+    </ul>
+    <div class="contacts__buttons">
+      <button class="contacts__button" type="button" data-location-modal-open>
+        Our Locations
+        <svg class="contacts__button-icon" width="12" height="12">
+          <use href="./images/icons.svg#icon-arrow"></use>
+        </svg>
+      </button>
+      <button
+        class="contacts__button contacts__button-second"
+        type="button"
+        data-franchise-modal-open
+      >
+        Franchise
+        <svg class="contacts__button-icon" width="12" height="12">
+          <use href="./images/icons.svg#icon-arrow"></use>
+        </svg>
+      </button>
     </div>
+  </div>
 </section>
