--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,38 +1,66 @@
 .contacts {
-    background: #84A178;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    position: relative;
-    height: 1095px;
-
+  background: #84a178;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  position: relative;
+  height: 1095px;
+  @media screen and (min-width: 768px) {
+    height: 360px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 636px;
+  }
 }
 
 .contact__card-list {
-    position: absolute;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    text-decoration: none;
-    top: -358px;
-    left: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  text-decoration: none;
+  top: -358px;
+  left: 50%;
+  transform: translateX(-50%);
+  @media screen and (min-width: 768px) {
+    width: 100%;
+    top: -299px;
+    flex-direction: row;
+  }
+  @media screen and (min-width: 1200px) {
+    top: -128px;
+  }
 }
 
 .contacts__company {
-    width: 280px;
-    background: #FCFCFC;
-    border-radius: 24px;
-    padding: 40px 32px 24px 32px;
-    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  width: 280px;
+  background: #fcfcfc;
+  border-radius: 24px;
+  padding: 40px 32px 24px 32px;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  @media screen and (min-width: 768px) {
+    padding: 40px 24px;
+    height: 537px;
+    width: 224px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 40px;
+    width: 368px;
+    height: 542px;
+  }
 }
 
 .contacts__name-wrap {
-    display: inline-block;
-    background: #F8D24E;
-    border-radius: 4px;
-    margin-bottom: 20px;
+  display: inline-block;
+  background: #f8d24e;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 32px;
+  }
 }
 // .contacts__name-foodtruck {
 //     padding: 4px 22px;
@@ -45,16 +73,21 @@
 // }
 
 .contacts__name {
-    display: block;
-    padding: 4px 22px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 12px;
-    line-height: calc(14 / 12);
-    letter-spacing: 0.04em;
-    color: #131313;
+  display: block;
+  padding: 4px 22px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.04em;
+  color: #131313;
+  @media screen and (min-width: 768px) {
+    padding: 4px 10px;
+    font-size: 16px;
+    line-height: 1.4;
+  }
 }
 // .contacts__name-food {
 //     font-family: 'Montserrat';
@@ -68,111 +101,155 @@
 // }
 
 .contacts__location {
-    // height: 70px;   
-    padding-bottom: 24px;
-    border-bottom: 1px solid #E1E1E1;
+  // height: 70px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .contacts__location-text {
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: calc(22 / 12);
-letter-spacing: 0.04em;
-color: #131313;
-margin-bottom: 8px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  letter-spacing: 0.04em;
+  color: #131313;
+  margin-bottom: 8px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
 }
 
 .contacts__location-link {
-    font-size: 12px;
-    line-height: calc(22 / 12);
-    letter-spacing: 0.04em;
-    color: #D6936D;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  letter-spacing: 0.04em;
+  color: #d6936d;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.83;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 
 .contacts__location-link:hover,
 .contacts__location-link:focus {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .working-days {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: calc(22 / 12);
-    color: #131313;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  color: #131313;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 .working-time {
-    // width: 124px;
-    // height: 22px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: calc(22 / 12);
-    color: #ABABAB;
+  // width: 124px;
+  // height: 22px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  color: #ababab;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 
 .contacts__week {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid #E1E1E1;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e1e1e1;
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 .contacts__week-item:not(:last-child) {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .contacts__address {
-    padding-top: 24px;
+  padding-top: 24px;
 }
 .address-link {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: calc(19 / 12);
-    color: #131313;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(19 / 12);
+  color: #131313;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 .address-link:not(:last-child) {
-    margin-bottom: 6px;
+  margin-bottom: 6px;
 }
 .contacts__buttons {
-    position: absolute;
-    top: 935px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.contacts__button   {
-    width: 196px;
-    padding: 12px 35px;
-    margin: 0 auto;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: calc(18 / 14);
-    background: #F8D24E;
-    border-radius: 10px;
+  position: absolute;
+  top: 935px;
+  left: 50%;
+  transform: translateX(-50%);
+  @media screen and (min-width: 768px) {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid #F8D24E;
-    // border-style: none;
+    gap: 16px;
+    top: 278px;
+  }
+  @media screen and (min-width: 1200px) {
+    top: 474px;
+  }
+}
+.contacts__button {
+  width: 196px;
+  padding: 12px 35px;
+  margin: 0 auto;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+  background: #f8d24e;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #f8d24e;
+  @media screen and (min-width: 768px) {
+    height: 42px;
+  }
 }
 .contacts__button:not(:last-child) {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 .contacts__button-icon {
-    margin-left: 4px;
+  margin-left: 4px;
 }
 .contacts__button-second {
-    background-color: #84A178;
+  background-color: #84a178;
 }
-
-
-
-
-
-
-
