--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -58,8 +58,9 @@
 	</div>
 </header>
 
-<section class="hero" id="home">
+<section class="hero">
 	<div class="container">
+		<div class="hero__anchor" id="home"></div>
 		<h1 class="hero__title">ice cream made with passion</h1>
 
 		<div class="hero__anchors">
