--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -15,19 +15,19 @@
     </picture>
     <ul class="ingredients-energy-list">
       <li class="ingredients-energy-item">
-        <p class="energy-value">320</p>
+        <p class="energy-value"><span class="count">320</span></p>
         <p class="energy-mean">kcal</p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value">4g</p>
+        <p class="energy-value"><span class="count">4g</span></p>
         <p class="energy-mean">Prote...</p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value">8,2g</p>
+        <p class="energy-value"><span class="count">8,2g</span></p>
         <p class="energy-mean">Fats</p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value">40,4g</p>
+        <p class="energy-value"><span class="count">40,4g</span></p>
         <p class="energy-mean">Carbs</p>
       </li>
     </ul>
