--- a/src/sass/components/_ingredients-modal.scss
+++ b/src/sass/components/_ingredients-modal.scss
@@ -65,6 +65,11 @@
   border: 2px solid #9cbe8f;
   box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
 }
+
+.count {
+  display: block;
+  padding-top: 18%;
+}
 .energy-mean {
 }
 
