--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,5 @@
 @import './components/footer';
 @import './components/read-more-modal';
 @import './components/ingredients-modal';
+@import './components/franchise-modal';
+@import './components/location-modal';
