--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -240,6 +240,7 @@
   align-items: center;
   justify-content: center;
   border: 2px solid #f8d24e;
+  cursor: pointer;
   @media screen and (min-width: 768px) {
     height: 42px;
   }
