--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -15,20 +15,24 @@
     </picture>
     <ul class="ingredients-energy-list">
       <li class="ingredients-energy-item">
-        <p class="energy-value"><span class="count">320</span></p>
-        <p class="energy-mean">kcal</p>
+        <p class="energy-value"><span class="energy-value-count">320</span></p>
+        <p class="energy-mean"><span class="energy-mean-value"> kcal</span></p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value"><span class="count">4g</span></p>
-        <p class="energy-mean">Prote...</p>
+        <p class="energy-value"><span class="energy-value-count">4g</span></p>
+        <p class="energy-mean">
+          <span class="energy-mean-value"> Prote...</span>
+        </p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value"><span class="count">8,2g</span></p>
-        <p class="energy-mean">Fats</p>
+        <p class="energy-value"><span class="energy-value-count">8,2g</span></p>
+        <p class="energy-mean"><span class="energy-mean-value"> Fats</span></p>
       </li>
       <li class="ingredients-energy-item">
-        <p class="energy-value"><span class="count">40,4g</span></p>
-        <p class="energy-mean">Carbs</p>
+        <p class="energy-value">
+          <span class="energy-value-count">40,4g</span>
+        </p>
+        <p class="energy-mean"><span class="energy-mean-value"> Carbs</span></p>
       </li>
     </ul>
 
