--- a/src/sass/components/_ingredients-modal.scss
+++ b/src/sass/components/_ingredients-modal.scss
@@ -66,11 +66,25 @@
   box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
 }
 
-.count {
+.energy-value-count {
   display: block;
   padding-top: 18%;
 }
 .energy-mean {
+  font-family: 'Montserrat';
+  font-size: 10px;
+  line-height: 1.2;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: var(--title-black-color);
+}
+
+.energy-mean-value {
+  display: block;
+  padding-top: 18%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ingredients-subtitle {
