product modal on

--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -1,8 +1,8 @@
 <!-- -------------------------------------ingredients-modal--------- -->
 
-<div class="backdrop is-hidde" data-ingredients-modal>
+<div class="backdrop is-hidden" data-ingredients-modal>
   <div class="ingredients-modal-window">
-    <button class="ingredients-modal-close">
+    <button class="ingredients-modal-close" data-ingredients-modal-close>
       <svg class="ingredients-modal-close__icon">
         <use href="/src/images/icons.svg#icon-menu-cross"></use>
       </svg>
