--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -30,7 +30,7 @@
             </p>
           </div>
 
-          <svg class="product-arrow">
+          <svg class="product-arrow" data-ingredients-modal-open>
             <use href="/src/images/icons.svg#icon-big-arrow"></use>
           </svg>
         </div>
@@ -45,7 +45,7 @@
             </p>
           </div>
 
-          <svg class="product-arrow">
+          <svg class="product-arrow" data-ingredients-modal-open>
             <use href="/src/images/icons.svg#icon-big-arrow"></use>
           </svg>
         </div>
