icon-modal-cross

--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -4,7 +4,7 @@
   <div class="ingredients-modal-window">
     <button class="ingredients-modal-close" data-ingredients-modal-close>
       <svg class="ingredients-modal-close__icon">
-        <use href="/src/images/icons.svg#icon-menu-cross"></use>
+        <use href="/src/images/icons.svg#icon-modal-cross"></use>
       </svg>
     </button>
     <h3 class="ingredients-title">Chololate icecream</h3>
