--- a/src/sass/components/_ingredients-modal.scss
+++ b/src/sass/components/_ingredients-modal.scss
@@ -27,7 +27,7 @@
   right: 12px;
   width: 20px;
   height: 20px;
-  background-color: rgb(189, 186, 186);
+  background-color: transparent;
   border: none;
   display: flex;
   justify-content: center;
@@ -35,7 +35,6 @@
   cursor: pointer;
   &__icon {
     position: absolute;
-    fill: var(--title-black-color);
     width: 20px;
     height: 20px;
   }
@@ -142,6 +141,7 @@
   border: 1px solid #84a178;
   border-radius: 10px;
   color: red;
+  padding-left: 10px;
 }
 
 .form-tel {
@@ -151,6 +151,7 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
+  padding-left: 10px;
 }
 
 .form-comment {
@@ -161,6 +162,8 @@
   background: rgba(248, 210, 78, 0.1);
   border: 1px solid #84a178;
   border-radius: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .submit-button {
