added button up

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -116,3 +116,5 @@
 			src="./images/hero-header/ice-cream-mob.png" alt="ice-cream" />
 	</picture>
 </section>
+
+<a class="back-to-top" href="#"></a>
