--- a/src/sass/components/_hero-header.scss
+++ b/src/sass/components/_hero-header.scss
@@ -103,7 +103,7 @@
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		z-index: 99;
+		z-index: 1001;
 		transform: translateX(-100%);
 		transition: transform 500ms linear;
 
@@ -119,8 +119,7 @@
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		z-index: 99;
-
+		z-index: 1001;
 		transform: translateX(-100%);
 		transition: transform 500ms linear;
 
@@ -258,7 +257,6 @@
 }
 
 .hero__title {
-	padding-top: 40px;
 	font-family: "Seymour One";
 	font-weight: 400;
 	font-size: 26px;
@@ -269,7 +267,12 @@
 
 	@media screen and (max-width: 1199px) {
 		width: 247px;
-		height: 97px;
+	}
+
+	@media screen and (min-widt: 768px) and (max-width: 1199px) {
+		width: 247px;
+
+		padding-top: 5px;
 	}
 
 	@media screen and (min-width: 1200px) {
@@ -277,6 +280,7 @@
 		line-height: 1.26;
 		width: 367px;
 		height: 144px;
+		padding-top: 40px;
 	}
 }
 
@@ -288,7 +292,7 @@
 		margin-top: 32px;
 	}
 	@media screen and (min-width: 768px) and (max-width: 1199px) {
-		margin-top: 24px;
+		margin-top: 12px;
 	}
 	@media screen and (min-width: 1200px) {
 		margin-top: 48px;
@@ -337,6 +341,8 @@
 }
 
 .hero__how {
+	padding: 20px 0;
+	display: block;
 	font-weight: 600;
 	font-size: 14px;
 	line-height: 1.21;
@@ -505,5 +511,56 @@
 		margin: auto;
 		left: 652;
 		right: 92;
+	}
+}
+
+.back-to-top {
+	position: fixed;
+	right: 50;
+	bottom: 100;
+	z-index: 999;
+	display: none;
+
+	border-color: transparent;
+	border-radius: 50%;
+	background-color: var(--button-background);
+	&:hover,
+	&:focus {
+		background-color: #f8c408;
+		outline: none;
+	}
+	&::before,
+	&::after {
+		content: "";
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+	&::before {
+		width: 5px;
+		height: 25px;
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
+		background-color: #fff;
+	}
+	&::after {
+		width: 15px;
+		height: 15px;
+		transform: translate(-50%, -50%) rotate(45deg);
+		border-top: 5px solid white;
+		border-left: 5px solid white;
+	}
+	@media screen and (max-width: 767px) {
+		width: 50px;
+		height: 50px;
+	}
+	@media screen and (min-width: 768px) and (max-width: 1199px) {
+		width: 60px;
+		height: 60px;
+	}
+	@media screen and (min-width: 1200px) {
+		width: 80px;
+		height: 80px;
 	}
 }
