picture on modal

--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -8,6 +8,7 @@
       </svg>
     </button>
     <h3 class="ingredients-title">Chololate icecream</h3>
+
     <picture class="ingredients-picture">
       <source
         class="ingredients-img"
@@ -17,7 +18,17 @@
         "
         media="(min-widht: 768px)"
       />
+      <img
+        srcset="
+          ./images/products/ingrade-ice-cream-mob.jpg    1x,
+          ./images/products/ingrade-ice-cream-mob-2x.jpg 2x
+        "
+        sizes="100%"
+        src="/src/images/products/ingrade-ice-cream-mob.jpg"
+        alt="ice"
+      />
     </picture>
+
     <ul class="ingredients-energy-list">
       <li class="ingredients-energy-item">
         <p class="energy-value"><span class="energy-value-count">320</span></p>
