--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -64,7 +64,7 @@
 		<h1 class="hero__title">ice cream made with passion</h1>
 
 		<div class="hero__anchors">
-			<a class="hero__products" href="#products"><span>Products</span></a>
+			<a class="hero__products" href="#products">Products</a>
 			<a class="hero__how" href="#how">How it’s made? </a>
 		</div>
 
